Por añadir: queda resolver el por qué no puedo usar JAVAFX si añado en VM Options las librerias y hacer el diagrama de quintas en CSV
Signed-off-by: JCRodriguez93 <jorge_madro@hotmail.com>